--- a/src/main/webapp/WEB-INF/xhtml/templates/baseLayout.xhtml
+++ b/src/main/webapp/WEB-INF/xhtml/templates/baseLayout.xhtml
@@ -15,7 +15,7 @@
 	<p:layout fullPage="true">
 		<p:layoutUnit position="north" size="80">
 			<div style="text-align: center">
-				<h:outputText value="Rabbit Chat Web" />
+				<h:outputText value="Whatsupp" />
 			</div>
 			<ui:fragment rendered="#{userSessionView.logado}">
 				<div style="text-align: right">
